Fix status count alignment in console

--- a/htdocs/css/custom.css
+++ b/htdocs/css/custom.css
@@ -69,10 +69,6 @@ table.summary {
   background-color: #ccc;
 }
 
-#status-counts {
-  margin-left: 0px;
-}
-
 #from-date-select {
   width: 150px;
 }
